load("//tools/base/build-system/integration-test:integration-test.bzl", "gradle_integration_test", "single_gradle_integration_test_per_source")
load("//tools/base/bazel:maven.bzl", "maven_repo")

#keep sorted
DATA = [
    "//prebuilts/studio/sdk:build-tools/latest",
    "//prebuilts/studio/sdk:platforms/latest_build_only",
    "//tools/base/build-system:gradle-distrib",
]

# keep sorted
DEPS = [
    "//tools/base/annotations",
    "//tools/base/build-system:gradle-api",
    "//tools/base/build-system/builder",
    "//tools/base/build-system/builder-model",
    "//tools/base/build-system/builder-test-api:tools.builder-test-api",
    "//tools/base/build-system/gradle-api",
    "//tools/base/build-system/gradle-core",
    "//tools/base/build-system/integration-test/framework",
    "//tools/base/common:tools.common",
    "//tools/base/ddmlib:tools.ddmlib",
    "//tools/base/repository:tools.repository",
    "//tools/base/sdk-common:tools.sdk-common",
    "//tools/base/sdklib:tools.sdklib",
    "//tools/base/testutils:tools.testutils",
    "//tools/base/third_party:com.google.guava_guava",
    "//tools/base/third_party:com.google.truth.extensions_truth-java8-extension",
    "//tools/base/third_party:com.google.truth_truth",
    "//tools/base/third_party:commons-io_commons-io",
    "//tools/base/third_party:org.jetbrains.kotlin_kotlin-stdlib",
    "//tools/base/third_party:org.jetbrains.kotlin_kotlin-test",
]

MAVEN_REPOS = [
    "//tools/base/build-system:gradle_plugin_no_databinding_repo",
    "//tools/base/build-system/integration-test/lint:prebuilts",
    "//tools/base/build-system/integration-test:support_library_latest",
    "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
]

LONG_RUNNING_TESTS = [
    "src/test/java/com/android/build/gradle/integration/lint/AndroidLintAnalysisTaskTest.kt",
    "src/test/java/com/android/build/gradle/integration/lint/LintFixTest.java",
    "src/test/java/com/android/build/gradle/integration/lint/LintSystemPropertiesTest.kt",
    "src/test/java/com/android/build/gradle/integration/lint/LintWithAnalyticsEnabledTest.kt",
]

# create a bazel target for some long-running tests
gradle_integration_test(
    name = "long-running-tests",
    timeout = "long",
    srcs = glob(
        include = LONG_RUNNING_TESTS,
    ),
    data = DATA + [
        "//tools/base/build-system/integration-test:test-projects/lintKotlin",
    ],
    maven_repos = MAVEN_REPOS,
    deps = DEPS,
)

gradle_integration_test(
    name = "tests",
    timeout = "long",
    srcs = glob(
        [
            "src/test/java/**/*.java",
            "src/test/java/**/*.kt",
        ],
        exclude = LONG_RUNNING_TESTS,
    ),
    data = DATA + [
        "//tools/base/build-system/integration-test:test-projects/dynamicApp",
        "//tools/base/build-system/integration-test:test-projects/lintBaseline",
        "//tools/base/build-system/integration-test:test-projects/lintCustomLocalAndPublishRules",
        "//tools/base/build-system/integration-test:test-projects/lintCustomRules",
        "//tools/base/build-system/integration-test:test-projects/lintDeps",
        "//tools/base/build-system/integration-test:test-projects/lintInstantiate",
        "//tools/base/build-system/integration-test:test-projects/lintKotlin",
        "//tools/base/build-system/integration-test:test-projects/lintLibraryModel",
        "//tools/base/build-system/integration-test:test-projects/lintLibrarySkipDeps",
        "//tools/base/build-system/integration-test:test-projects/lintMultipleLintJars",
        "//tools/base/build-system/integration-test:test-projects/lintNoJavaClasses",
        "//tools/base/build-system/integration-test:test-projects/lintResourceResolve",
        "//tools/base/build-system/integration-test:test-projects/lintStandalone",
        "//tools/base/build-system/integration-test:test-projects/lintStandaloneCustomRules",
        "//tools/base/build-system/integration-test:test-projects/lintStandaloneVital",
        "//tools/base/build-system/integration-test:test-projects/lintSuppress",
    ],
    maven_repos = MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    shard_count = 6,
    deps = DEPS,
)

maven_repo(
    name = "prebuilts",
    # keep sorted
    artifacts = [
        "//prebuilts/tools/common/m2:android.arch.core.common.1.0.0",
        "//prebuilts/tools/common/m2:android.arch.core.common.1.1.0",
        "//prebuilts/tools/common/m2:android.arch.core.runtime.1.1.0_aar",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.common.1.1.0",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.livedata.1.1.1_aar",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.livedata-core.1.1.0_aar",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.runtime.1.1.0_aar",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.viewmodel.1.1.0_aar",
        "//prebuilts/tools/common/m2:android.arch.navigation.navigation-common.1.0.0_aar",
        "//prebuilts/tools/common/m2:android.arch.navigation.navigation-fragment.1.0.0_aar",
        "//prebuilts/tools/common/m2:android.arch.navigation.navigation-runtime.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.activity.activity.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.activity.activity.1.2.0-alpha02_aar",
        "//prebuilts/tools/common/m2:androidx.annotation.annotation.1.1.0",
        "//prebuilts/tools/common/m2:androidx.appcompat.appcompat.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.appcompat.appcompat-resources.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.arch.core.core-common.2.1.0",
        "//prebuilts/tools/common/m2:androidx.arch.core.core-runtime.2.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.autofill.autofill.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.collection.collection.1.1.0",
        "//prebuilts/tools/common/m2:androidx.compose.animation.animation.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.animation.animation-core.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.compiler.compiler.1.0.0-beta07",
        "//prebuilts/tools/common/m2:androidx.compose.foundation.foundation.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.foundation.foundation-layout.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.material.material.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.material.material-icons-core.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.runtime.runtime.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.runtime.runtime-saveable.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.ui.ui.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.ui.ui-geometry.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.ui.ui-graphics.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.ui.ui-text.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.ui.ui-tooling.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.ui.ui-unit.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.ui.ui-util.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.constraintlayout.constraintlayout-core.1.0.0-alpha1",
        "//prebuilts/tools/common/m2:androidx.core.core.1.0.1_aar",
        "//prebuilts/tools/common/m2:androidx.core.core.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.core.core-ktx.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.dynamicanimation.dynamicanimation.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.fragment.fragment.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-common.2.1.0",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-common.2.3.0-alpha01",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata-core.2.3.0-alpha01_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-runtime.2.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-runtime.2.3.0-alpha01_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel.2.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel.2.3.0-alpha01_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel-savedstate.2.3.0-alpha01_aar",
        "//prebuilts/tools/common/m2:androidx.navigation.navigation-common.2.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.navigation.navigation-fragment.2.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.navigation.navigation-runtime.2.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.savedstate.savedstate.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.core.1.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.espresso.espresso-core.3.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.espresso.espresso-idling-resource.3.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.ext.junit.1.1.1_aar",
        "//prebuilts/tools/common/m2:androidx.test.monitor.1.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.rules.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.runner.1.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.vectordrawable.vectordrawable.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.vectordrawable.vectordrawable-animated.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.versionedparcelable.versionedparcelable.1.1.0_aar",
        "//prebuilts/tools/common/m2:backport-util-concurrent.backport-util-concurrent.3.1",
        "//prebuilts/tools/common/m2:classworlds.classworlds.1.1-alpha-2",
        "//prebuilts/tools/common/m2:com.almworks.sqlite4java.sqlite4java.0.282",
        "//prebuilts/tools/common/m2:com.android.support.animated-vector-drawable.26.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.animated-vector-drawable.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.appcompat-v7.26.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.appcompat-v7.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.constraint.constraint-layout.1.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.constraint.constraint-layout-solver.1.0.2",
        "//prebuilts/tools/common/m2:com.android.support.design.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.leanback-v17.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.multidex.1.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.multidex-instrumentation.1.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.preference-v7.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.preference-v7.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.recyclerview-v7.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-annotations.24.0.0",
        "//prebuilts/tools/common/m2:com.android.support.support-annotations.25.4.0",
        "//prebuilts/tools/common/m2:com.android.support.support-annotations.26.0.2",
        "//prebuilts/tools/common/m2:com.android.support.support-annotations.27.1.1",
        "//prebuilts/tools/common/m2:com.android.support.support-compat.26.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-compat.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-core-ui.26.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-core-ui.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-core-utils.26.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-core-utils.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-fragment.26.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-fragment.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-media-compat.26.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-media-compat.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-media-compat.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-v13.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-v4.24.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-v4.26.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-v4.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-v4.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-vector-drawable.26.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-vector-drawable.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.espresso.espresso-core.3.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.espresso.espresso-idling-resource.3.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.monitor.1.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.orchestrator.1.0.0_apk",
        "//prebuilts/tools/common/m2:com.android.support.test.rules.1.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.runner.1.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.services.test-services.1.0.0_apk",
        "//prebuilts/tools/common/m2:com.android.support.transition.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.tools.build.transform-api.1.5.0",
        "//prebuilts/tools/common/m2:com.android.tools.desugar_jdk_libs.1.1.5",
        "//prebuilts/tools/common/m2:com.android.tools.desugar_jdk_libs_configuration.1.1.5",
        "//prebuilts/tools/common/m2:com.artemzin.rxjava.proguard-rules.1.1.0.0_aar",
        "//prebuilts/tools/common/m2:com.braintreepayments.api.braintree.2.3.12_aar",
        "//prebuilts/tools/common/m2:com.braintreepayments.api.core.2.3.12_aar",
        "//prebuilts/tools/common/m2:com.crashlytics.sdk.android.crashlytics.2.6.7_aar",
        "//prebuilts/tools/common/m2:com.fasterxml.jackson.core.jackson-core.2.6.3",
        "//prebuilts/tools/common/m2:com.fasterxml.jackson.core.jackson-databind.2.6.3",
        "//prebuilts/tools/common/m2:com.githang.viewpagerindicator.2.5_aar",
        "//prebuilts/tools/common/m2:com.github.ben-manes.gradle-versions-plugin.0.11.3",
        "//prebuilts/tools/common/m2:com.github.bumptech.glide.glide.3.6.1",
        "//prebuilts/tools/common/m2:com.github.bumptech.glide.okhttp-integration.1.3.1",
        "//prebuilts/tools/common/m2:com.github.dcendents.android-maven-gradle-plugin.1.4.1",
        "//prebuilts/tools/common/m2:com.github.javaparser.javaparser-core.3.5.14",
        "//prebuilts/tools/common/m2:com.google.android.apps.common.testing.accessibility.framework.accessibility-test-framework.2.1",
        "//prebuilts/tools/common/m2:com.google.android.gms.play-services-base.15.0.1_aar",
        "//prebuilts/tools/common/m2:com.google.android.gms.play-services-basement.15.0.1_aar",
        "//prebuilts/tools/common/m2:com.google.android.gms.play-services-tasks.15.0.1_aar",
        "//prebuilts/tools/common/m2:com.google.auto.auto-common.0.3",
        "//prebuilts/tools/common/m2:com.google.auto.service.auto-service.1.0-rc2",
        "//prebuilts/tools/common/m2:com.google.code.findbugs.jsr305.1.3.9",
        "//prebuilts/tools/common/m2:com.google.code.findbugs.jsr305.2.0.1",
        "//prebuilts/tools/common/m2:com.google.code.findbugs.jsr305.3.0.1",
        "//prebuilts/tools/common/m2:com.google.errorprone.error_prone_annotations.2.1.3",
        "//prebuilts/tools/common/m2:com.google.guava.guava.18.0",
        "//prebuilts/tools/common/m2:com.google.guava.guava.19.0",
        "//prebuilts/tools/common/m2:com.google.guava.guava.20.0",
        "//prebuilts/tools/common/m2:com.google.guava.guava.27.0.1-android",
        "//prebuilts/tools/common/m2:com.google.guava.listenablefuture.1.0",
        "//prebuilts/tools/common/m2:com.google.j2objc.j2objc-annotations.1.1",
        "//prebuilts/tools/common/m2:com.google.protobuf.protobuf-java.2.6.1",
        "//prebuilts/tools/common/m2:com.googlecode.jarjar.jarjar.1.3",
        "//prebuilts/tools/common/m2:com.ibm.icu.icu4j.53.1",
        "//prebuilts/tools/common/m2:com.jakewharton.butterknife.7.0.1",
        "//prebuilts/tools/common/m2:com.jakewharton.butterknife-gradle-plugin.9.0.0-rc1",
        "//prebuilts/tools/common/m2:com.jakewharton.butterknife-gradle-plugin.9.0.0-rc2",
        "//prebuilts/tools/common/m2:com.jayway.android.robotium.robotium-solo.5.5.3",
        "//prebuilts/tools/common/m2:com.joanzapata.iconify.android-iconify.2.1.1_aar",
        "//prebuilts/tools/common/m2:com.joanzapata.iconify.android-iconify-fontawesome.2.1.1_aar",
        "//prebuilts/tools/common/m2:com.joanzapata.iconify.android-iconify-material.2.1.1_aar",
        "//prebuilts/tools/common/m2:com.neenbedankt.gradle.plugins.android-apt.1.8",
        "//prebuilts/tools/common/m2:com.nineoldandroids.library.2.4.0",
        "//prebuilts/tools/common/m2:com.paypal.android.sdk.data-collector.2.3.12",
        "//prebuilts/tools/common/m2:com.paypal.android.sdk.paypal-one-touch.2.3.12_aar",
        "//prebuilts/tools/common/m2:com.simperium.android.simperium.0.6.8_aar",
        "//prebuilts/tools/common/m2:com.squareup.dagger.dagger.1.2.2",
        "//prebuilts/tools/common/m2:com.squareup.dagger.dagger-compiler.1.2.2",
        "//prebuilts/tools/common/m2:com.squareup.javawriter.2.1.1",
        "//prebuilts/tools/common/m2:com.squareup.okhttp.okhttp.2.7.4",
        "//prebuilts/tools/common/m2:com.squareup.okhttp.okhttp-urlconnection.2.7.4",
        "//prebuilts/tools/common/m2:com.squareup.okhttp3.okhttp.3.4.1",
        "//prebuilts/tools/common/m2:com.squareup.okio.okio.1.6.0",
        "//prebuilts/tools/common/m2:com.squareup.okio.okio.1.9.0",
        "//prebuilts/tools/common/m2:com.thoughtworks.xstream.xstream.1.4.7",
        "//prebuilts/tools/common/m2:com.thoughtworks.xstream.xstream.1.4.8",
        "//prebuilts/tools/common/m2:com.yalantis.ucrop.2.2.0_aar",
        "//prebuilts/tools/common/m2:com.yqritc.recyclerview-flexibledivider.1.2.6_aar",
        "//prebuilts/tools/common/m2:commons-codec.commons-codec.1.4",
        "//prebuilts/tools/common/m2:commons-lang.commons-lang.2.4",
        "//prebuilts/tools/common/m2:commons-logging.commons-logging.1.1.1",
        "//prebuilts/tools/common/m2:de.greenrobot.eventbus.2.4.0",
        "//prebuilts/tools/common/m2:io.fabric.tools.gradle.1.22.1",
        "//prebuilts/tools/common/m2:io.fabric.tools.gradle.1.28.0",
        "//prebuilts/tools/common/m2:io.reactivex.rxandroid.1.1.0_aar",
        "//prebuilts/tools/common/m2:io.reactivex.rxjava.1.1.0",
        "//prebuilts/tools/common/m2:javax.annotation.javax.annotation-api.1.2",
        "//prebuilts/tools/common/m2:javax.annotation.jsr250-api.1.0",
        "//prebuilts/tools/common/m2:me.tatarka.gradle-retrolambda.3.2.4",
        "//prebuilts/tools/common/m2:me.tatarka.retrolambda.projectlombok.lombok.ast.0.2.3.a2",
        "//prebuilts/tools/common/m2:me.zhanghai.android.materialprogressbar.library.1.1.4_aar",
        "//prebuilts/tools/common/m2:nekohtml.nekohtml.1.9.6.2",
        "//prebuilts/tools/common/m2:nekohtml.xercesMinimal.1.9.6.2",
        "//prebuilts/tools/common/m2:net.bytebuddy.byte-buddy.1.6.5",
        "//prebuilts/tools/common/m2:net.bytebuddy.byte-buddy-agent.1.6.5",
        "//prebuilts/tools/common/m2:net.orfjackal.retrolambda.retrolambda.2.0.6",
        "//prebuilts/tools/common/m2:org.apache.ant.ant.1.8.0",
        "//prebuilts/tools/common/m2:org.apache.ant.ant-launcher.1.8.0",
        "//prebuilts/tools/common/m2:org.apache.commons.commons-lang3.3.4",
        "//prebuilts/tools/common/m2:org.apache.httpcomponents.httpclient.4.1.1",
        "//prebuilts/tools/common/m2:org.apache.httpcomponents.httpcore.4.1",
        "//prebuilts/tools/common/m2:org.apache.maven.maven-ant-tasks.2.1.3",
        "//prebuilts/tools/common/m2:org.apache.maven.maven-artifact.2.2.1",
        "//prebuilts/tools/common/m2:org.apache.maven.maven-artifact-manager.2.2.1",
        "//prebuilts/tools/common/m2:org.apache.maven.maven-error-diagnostics.2.2.1",
        "//prebuilts/tools/common/m2:org.apache.maven.maven-model.2.2.1",
        "//prebuilts/tools/common/m2:org.apache.maven.maven-plugin-registry.2.2.1",
        "//prebuilts/tools/common/m2:org.apache.maven.maven-profile.2.2.1",
        "//prebuilts/tools/common/m2:org.apache.maven.maven-project.2.2.1",
        "//prebuilts/tools/common/m2:org.apache.maven.maven-repository-metadata.2.2.1",
        "//prebuilts/tools/common/m2:org.apache.maven.maven-settings.2.2.1",
        "//prebuilts/tools/common/m2:org.apache.maven.wagon.wagon-file.1.0-beta-6",
        "//prebuilts/tools/common/m2:org.apache.maven.wagon.wagon-http-lightweight.1.0-beta-6",
        "//prebuilts/tools/common/m2:org.apache.maven.wagon.wagon-http-shared.1.0-beta-6",
        "//prebuilts/tools/common/m2:org.apache.maven.wagon.wagon-provider-api.1.0-beta-6",
        "//prebuilts/tools/common/m2:org.assertj.assertj-core.2.6.0",
        "//prebuilts/tools/common/m2:org.bouncycastle.bcprov-jdk15on.1.50",
        "//prebuilts/tools/common/m2:org.bouncycastle.bcprov-jdk15on.1.52",
        "//prebuilts/tools/common/m2:org.bouncycastle.bcprov-jdk16.1.46",
        "//prebuilts/tools/common/m2:org.codehaus.plexus.plexus-container-default.1.0-alpha-9-stable-1",
        "//prebuilts/tools/common/m2:org.codehaus.plexus.plexus-interpolation.1.11",
        "//prebuilts/tools/common/m2:org.codehaus.plexus.plexus-utils.1.5.15",
        "//prebuilts/tools/common/m2:org.hamcrest.hamcrest-integration.1.3",
        "//prebuilts/tools/common/m2:org.hamcrest.hamcrest-library.1.3",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.agent.0.7.4.201502262128",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.agent.0.8.3",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.ant.0.7.4.201502262128",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.ant.0.8.3",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.core.0.7.4.201502262128",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.core.0.8.3",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.report.0.7.4.201502262128",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.report.0.8.3",
        "//prebuilts/tools/common/m2:org.jdeferred.jdeferred-android-aar.1.2.2_aar",
        "//prebuilts/tools/common/m2:org.jdeferred.jdeferred-android-aar.1.2.3_aar",
        "//prebuilts/tools/common/m2:org.jdeferred.jdeferred-core.1.2.2",
        "//prebuilts/tools/common/m2:org.jdeferred.jdeferred-core.1.2.3",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlin.kotlin-compiler-embeddable.1.3.70-dev-withExperimentalGoogleExtensions-20200424",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlinx.kotlinx-collections-immutable-jvm.0.3.3",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlinx.kotlinx-coroutines-android.1.3.6",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlinx.kotlinx-coroutines-core.1.3.6",
        "//prebuilts/tools/common/m2:org.json.json.20141113",
        "//prebuilts/tools/common/m2:org.jsoup.jsoup.1.7.3",
        "//prebuilts/tools/common/m2:org.mockito.mockito-core.1.9.5",
        "//prebuilts/tools/common/m2:org.mockito.mockito-core.2.7.1",
        "//prebuilts/tools/common/m2:org.objenesis.objenesis.1.0",
        "//prebuilts/tools/common/m2:org.objenesis.objenesis.2.5",
        "//prebuilts/tools/common/m2:org.ow2.asm.asm.5.0.1",
        "//prebuilts/tools/common/m2:org.ow2.asm.asm-commons.5.0.1",
        "//prebuilts/tools/common/m2:org.ow2.asm.asm-debug-all.5.0.1",
        "//prebuilts/tools/common/m2:org.ow2.asm.asm-debug-all.5.2",
        "//prebuilts/tools/common/m2:org.ow2.asm.asm-tree.5.0.1",
        "//prebuilts/tools/common/m2:org.reflections.reflections.0.9.10",
        "//prebuilts/tools/common/m2:org.robolectric.android-all.7.0.0_r1-robolectric-r1",
        "//prebuilts/tools/common/m2:org.robolectric.annotations.4.2.1",
        "//prebuilts/tools/common/m2:org.robolectric.junit.4.2.1",
        "//prebuilts/tools/common/m2:org.robolectric.pluginapi.4.2.1",
        "//prebuilts/tools/common/m2:org.robolectric.plugins-maven-dependency-resolver.4.2.1",
        "//prebuilts/tools/common/m2:org.robolectric.resources.4.2.1",
        "//prebuilts/tools/common/m2:org.robolectric.robolectric.4.2.1",
        "//prebuilts/tools/common/m2:org.robolectric.sandbox.4.2.1",
        "//prebuilts/tools/common/m2:org.robolectric.shadowapi.4.2.1",
        "//prebuilts/tools/common/m2:org.robolectric.shadows-framework.4.2.1",
        "//prebuilts/tools/common/m2:org.robolectric.utils.4.2.1",
        "//prebuilts/tools/common/m2:org.robolectric.utils-reflector.4.2.1",
        "//prebuilts/tools/common/m2:org.shredzone.flattr4j.flattr4j-core.2.12",
        "//prebuilts/tools/common/m2:org.slf4j.slf4j-api.1.7.2",
        "//prebuilts/tools/common/m2:org.threeten.threetenbp.1.3.3",
        "//prebuilts/tools/common/m2:xmlpull.xmlpull.1.1.3.1",
        "//prebuilts/tools/common/m2:xpp3.xpp3_min.1.1.4c",
        "//tools/base/third_party:junit_junit",
    ],
)
